add: Achievements, like in comments and more features.

--- a/public/admin.html
+++ b/public/admin.html
@@ -12,7 +12,7 @@
             <img class="brand-logo" src="/uploads/site-logo-min.png" alt="Logo Clube do Jogo">
         </a>
         <div class="nav-links">
-            <a href="/">Inicio</a>
+            <a href="/">Início</a>
             <a href="/profile.html">Perfil</a>
             <a id="adminNavLink" href="/admin.html">Administrador</a>
             <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
@@ -23,14 +23,24 @@
         <section id="adminPanel" class="card">
             <h1>Painel do Dono</h1>
             <p>Gerencie contas, rodadas e conquistas.</p>
-            <div class="panel-grid">
-                <article class="card">
-                    <h2>Usuarios</h2>
+            <div class="panel-grid admin-panel-layout">
+                <div class="admin-left-column">
+                    <article id="adminOwnerRequestsCard" class="card hidden">
+                        <h2>Solicitações pendentes</h2>
+                        <div id="adminOwnerRequestsList" class="recommendation-grid"></div>
+                    </article>
+                    <article id="adminSuggestionsCard" class="card hidden">
+                        <h2>Sugestões</h2>
+                        <div id="adminSuggestionsList" class="recommendation-grid"></div>
+                    </article>
+                    <article id="adminRoundsCard" class="card">
+                        <h2>Rodadas</h2>
+                        <div id="adminRoundsList" class="recommendation-grid"></div>
+                    </article>
+                </div>
+                <article id="adminUsersCard" class="card">
+                    <h2>Usuários</h2>
                     <div id="adminUsersList" class="recommendation-grid"></div>
-                </article>
-                <article class="card">
-                    <h2>Rodadas</h2>
-                    <div id="adminRoundsList" class="recommendation-grid"></div>
                 </article>
             </div>
             <p id="adminFeedback" class="feedback"></p>
