--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Clube do Jogo - Demonstracao visual do projeto com video e recursos implementados.">
+  <meta name="description" content="Clube do Jogo - Demonstração visual do projeto com vídeo e recursos implementados.">
   <title>Clube do Jogo - Demo</title>
   <link rel="stylesheet" href="demo.css">
 </head>
@@ -11,12 +11,12 @@
   <main class="demo-page">
     <section class="hero">
       <h1>Clube do Jogo - Demo</h1>
-      <p class="hero-subtitle">Esta pagina é apenas uma exposição do projeto. O sistema completo roda com backend Node.js + SQLite.</p>
+      <p class="hero-subtitle">Esta página é apenas uma exposição do projeto. O sistema completo roda com backend Node.js + SQLite.</p>
 
       <div class="video-frame">
-        <video id="demoVideo" autoplay muted loop playsinline preload="auto" aria-label="Demonstracao do projeto Clube do Jogo">
+        <video id="demoVideo" autoplay muted loop playsinline preload="auto" aria-label="Demonstração do projeto Clube do Jogo">
           <source src="demo_looping.mp4" type="video/mp4">
-          Seu navegador não suporta reproducao de vídeo MP4.
+          Seu navegador não suporta reprodução de vídeo MP4.
         </video>
       </div>
     </section>
@@ -25,12 +25,12 @@
       <h2>Sobre o Projeto</h2>
       <p>
         O Clube do Jogo foi criado para grupos que gostam de compartilhar experiências de games.
-        Cada rodada define quem indica um jogo para quem, depois as recomendações sao avaliadas em um plano naval (nota de A-J e 1-10).
+        Cada rodada define quem indica um jogo para quem, depois as recomendações são avaliadas em um plano naval (nota de A-J e 1-10).
       </p>
 
       <h3>Funcionalidades Principais</h3>
       <ul>
-        <li>Autenticacao com login/senha, verificação de email e recuperação de senha por link.</li>
+        <li>Autenticação com login/senha, verificação de email e recuperação de senha por link.</li>
         <li>Login com Google (OAuth) com criação ou vinculação de conta automaticamente.</li>
         <li>Rodadas com sorteio de pares, restrições de quem pode sair com quem e fases de indicação/nota.</li>
         <li>Busca de jogos da Steam com preenchimento de nome, descrição e capa.</li>
@@ -48,8 +48,8 @@
 
       <h3>Segurança</h3>
       <ul>
-        <li>Headers com Helmet, validação de origem e rate limit nas rotas sensiveis.</li>
-        <li>Hash de senha com bcrypt e controle de sessao por cookie HTTP-only.</li>
+        <li>Headers com Helmet, validação de origem e rate limit nas rotas sensíveis.</li>
+        <li>Hash de senha com bcrypt e controle de sessão por cookie HTTP-only.</li>
         <li>Fluxo de confirmação por email para cadastro e troca de senha.</li>
       </ul>
     </section>
@@ -62,7 +62,7 @@
 
       <div class="carousel" id="shotsCarousel" data-interval="5000">
         <button class="carousel-nav prev" id="carouselPrev" type="button" aria-label="Imagem anterior">&#10094;</button>
-        <button class="carousel-nav next" id="carouselNext" type="button" aria-label="Proxima imagem">&#10095;</button>
+        <button class="carousel-nav next" id="carouselNext" type="button" aria-label="Próxima imagem">&#10095;</button>
 
         <figure class="carousel-slide is-active">
           <img src="screenshots/login.jpg" alt="Tela de login">
@@ -93,23 +93,23 @@
           <figcaption>Sorteio - Resultado</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/indicacao1.jpg" alt="Tela de indicacao de jogo 1">
+          <img src="screenshots/indicacao1.jpg" alt="Tela de indicação de jogo 1">
           <figcaption>Indicação 1</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/indicacao2.jpg" alt="Tela de indicacao de jogo 2">
+          <img src="screenshots/indicacao2.jpg" alt="Tela de indicação de jogo 2">
           <figcaption>Indicação 2</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/indicacao3.jpg" alt="Tela de indicacao de jogo 3">
+          <img src="screenshots/indicacao3.jpg" alt="Tela de indicação de jogo 3">
           <figcaption>Indicação 3</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/indicacao4.jpg" alt="Tela de indicacao de jogo 4">
+          <img src="screenshots/indicacao4.jpg" alt="Tela de indicação de jogo 4">
           <figcaption>Indicação 4</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/indicacao5.jpg" alt="Tela de indicacao de jogo 5">
+          <img src="screenshots/indicacao5.jpg" alt="Tela de indicação de jogo 5">
           <figcaption>Indicação 5</figcaption>
         </figure>
         <figure class="carousel-slide">
@@ -121,7 +121,7 @@
           <figcaption>Nota Naval 2</figcaption>
         </figure>
         <figure class="carousel-slide">
-          <img src="screenshots/perfil.jpg" alt="Tela de perfil do usuario">
+          <img src="screenshots/perfil.jpg" alt="Tela de perfil do usuário">
           <figcaption>Perfil</figcaption>
         </figure>
       </div>
