--- a/public/profile.html
+++ b/public/profile.html
@@ -12,7 +12,7 @@
             <img class="brand-logo" src="/uploads/site-logo-min.png" alt="Logo Clube do Jogo">
         </a>
         <div class="nav-links">
-            <a href="/">Inicio</a>
+            <a href="/">Início</a>
             
             <a href="/profile.html">Perfil</a>
             <a id="adminNavLink" class="hidden" href="/admin.html">Administrador</a>
@@ -38,11 +38,11 @@
                 <form id="profileForm" class="profile-info-form">
                     <div class="profile-info-row">
                         <div class="profile-field">
-                            <label>Nome de usuario (nao editavel)</label>
+                            <label>Nome de usuário (não editável)</label>
                             <input name="username" type="text" readonly>
                         </div>
                         <div class="profile-field">
-                            <label id="emailFieldLabel">Email (nao editavel)</label>
+                            <label id="emailFieldLabel">Email (não editável)</label>
                             <input name="email" type="text" readonly>
                         </div>
                         <div id="nicknameFieldWrap" class="profile-field profile-field-nickname hidden">
@@ -64,7 +64,7 @@
 
         <section class="card">
             <h2>Senha</h2>
-            <p>Para trocar a senha, enviaremos um link de confirmacao para o email da sua conta.</p>
+            <p>Para trocar a senha, enviaremos um link de confirmação para o email da sua conta.</p>
             <button id="sendResetFromProfile" class="btn" type="button">Enviar link de troca de senha</button>
         </section>
 
@@ -73,67 +73,102 @@
             <p id="achievementsProgress" class="achievement-progress"></p>
             <div id="achievementsGrid" class="achievements-grid">
                 <article class="achievement-item locked" data-achievement-key="CGFerro" data-achievement-name="CGFerro">
-                    <img src="/uploads/trofeus/ferro.png" alt="Trofeu CGFerro">
+                    <img src="/uploads/trofeus/ferro.png" alt="Troféu CGFerro">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGBronze" data-achievement-name="CGBronze">
-                    <img src="/uploads/trofeus/bronze.png" alt="Trofeu CGBronze">
+                    <img src="/uploads/trofeus/bronze.png" alt="Troféu CGBronze">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGPrata" data-achievement-name="CGPrata">
-                    <img src="/uploads/trofeus/prata.png" alt="Trofeu CGPrata">
+                    <img src="/uploads/trofeus/prata.png" alt="Troféu CGPrata">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGOuro" data-achievement-name="CGOuro">
-                    <img src="/uploads/trofeus/ouro.png" alt="Trofeu CGOuro">
+                    <img src="/uploads/trofeus/ouro.png" alt="Troféu CGOuro">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGDiamante" data-achievement-name="CGDiamante">
-                    <img src="/uploads/trofeus/diamante.png" alt="Trofeu CGDiamante">
+                    <img src="/uploads/trofeus/diamante.png" alt="Troféu CGDiamante">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGMaster" data-achievement-name="CGMaster">
-                    <img src="/uploads/trofeus/master.png" alt="Trofeu CGMaster">
+                    <img src="/uploads/trofeus/master.png" alt="Troféu CGMaster">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGAcao" data-achievement-name="CGAcao">
-                    <img src="/uploads/trofeus/acao.png" alt="Trofeu CGAcao">
+                    <img src="/uploads/trofeus/acao.png" alt="Troféu CGAção">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGAventura" data-achievement-name="CGAventura">
+                    <img src="/uploads/trofeus/CGAventura.png" alt="Troféu CGAventura">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGDrama" data-achievement-name="CGDrama">
+                    <img src="/uploads/trofeus/CGDrama.png" alt="Troféu CGDrama">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGNarrativo" data-achievement-name="CGNarrativo">
+                    <img src="/uploads/trofeus/CGNarrativo.png" alt="Troféu CGNarrativo">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGRPG" data-achievement-name="CGRPG">
+                    <img src="/uploads/trofeus/CGRPG.png" alt="Troféu CGRPG">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGPlataforma" data-achievement-name="CGPlataforma">
+                    <img src="/uploads/trofeus/CGPlataforma.png" alt="Troféu CGPlataforma">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGCorrida" data-achievement-name="CGCorrida">
+                    <img src="/uploads/trofeus/CGCorrida.png" alt="Troféu CGCorrida">
+                    <strong>??????</strong>
+                    <span class="achievement-description">???????</span>
+                </article>
+                <article class="achievement-item locked" data-achievement-key="CGMundoAberto" data-achievement-name="CGMundoAberto">
+                    <img src="/uploads/trofeus/CGMundoAberto.png" alt="Troféu CGMundoAberto">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGTiro" data-achievement-name="CGTiro">
-                    <img src="/uploads/trofeus/tiro.png" alt="Trofeu CGTiro">
+                    <img src="/uploads/trofeus/tiro.png" alt="Troféu CGTiro">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGTerror" data-achievement-name="CGTerror">
-                    <img src="/uploads/trofeus/terror.png" alt="Trofeu CGTerror">
+                    <img src="/uploads/trofeus/terror.png" alt="Troféu CGTerror">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGSouls" data-achievement-name="CGSouls">
-                    <img src="/uploads/trofeus/souls.png" alt="Trofeu CGSouls">
+                    <img src="/uploads/trofeus/souls.png" alt="Troféu CGSouls">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGAwards" data-achievement-name="CGAwards">
-                    <img src="/uploads/trofeus/CGAwards.png" alt="Trofeu CGAwards">
+                    <img src="/uploads/trofeus/CGAwards.png" alt="Troféu CGAwards">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGOld" data-achievement-name="CGOld">
-                    <img src="/uploads/trofeus/CGOld.png" alt="Trofeu CGOld">
+                    <img src="/uploads/trofeus/CGOld.png" alt="Troféu CGOld">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
                 <article class="achievement-item locked" data-achievement-key="CGNewba" data-achievement-name="CGNewba">
-                    <img src="/uploads/trofeus/CGNewba.png" alt="Trofeu CGNewba">
+                    <img src="/uploads/trofeus/CGNewba.png" alt="Troféu CGNewba">
                     <strong>??????</strong>
                     <span class="achievement-description">???????</span>
                 </article>
@@ -144,21 +179,23 @@
             <h2>Atividades no Clube do Jogo</h2>
             <div class="panel-grid">
                 <article class="card">
-                    <h3>Indicacoes Feitas</h3>
+                    <h3>Indicações Feitas</h3>
                     <div id="profileGivenList" class="recommendation-grid"></div>
                 </article>
                 <article class="card">
-                    <h3>Indicacoes Recebidas</h3>
+                    <h3>Indicações Recebidas</h3>
                     <div id="profileReceivedList" class="recommendation-grid"></div>
                 </article>
             </div>
         </section>
 
         <section id="profileCommentsSection" class="card">
-            <h2>Comentarios no Perfil</h2>
+            <h2>Comentários no Perfil</h2>
             <div id="profileCommentsList" class="comment-list"></div>
+            <div id="profileCommentContext" class="comment-context hidden"></div>
             <form id="profileCommentForm" class="comment-form">
-                <input type="text" name="commentText" maxlength="500" placeholder="Escreva um comentario neste perfil">
+                <input type="hidden" name="parentCommentId">
+                <input type="text" name="commentText" maxlength="500" placeholder="Escreva um comentário neste perfil">
                 <button class="btn btn-outline" type="submit">Comentar</button>
             </form>
             <p id="profileCommentFeedback" class="feedback"></p>
