--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,23 @@
             <p>Defina a nova senha para sua conta.</p>
             <form id="resetPasswordForm">
                 <label>Nova senha</label>
-                <input name="password" type="password" minlength="8" required>
+                <div class="password-field">
+                    <input id="resetPassword" name="password" type="password" minlength="8" required>
+                    <button
+                        class="password-toggle is-hidden"
+                        type="button"
+                        data-password-toggle="resetPassword"
+                        aria-label="Mostrar senha"
+                        title="Mostrar senha"
+                        aria-pressed="false"
+                    ><span class="password-toggle-icon" aria-hidden="true">&#128065;</span></button>
+                </div>
+                <p class="field-feedback hidden" data-field-feedback-for="password"></p>
+                <label>Confirmar senha</label>
+                <div class="password-field">
+                    <input id="resetConfirmPassword" name="confirmPassword" type="password" minlength="8" required>
+                </div>
+                <p class="field-feedback hidden" data-field-feedback-for="confirmPassword"></p>
                 <button class="btn" type="submit">Salvar nova senha</button>
             </form>
             <div class="auth-links">
