--- a/public/verify-email.html
+++ b/public/verify-email.html
@@ -10,11 +10,11 @@
     <main class="auth-shell">
         <section class="auth-card">
             <h1>Confirmar email</h1>
-            <p>Digite o codigo enviado para o email informado no cadastro.</p>
+            <p>Digite o código enviado para o email informado no cadastro.</p>
             <form id="verifyForm">
                 <label>Email</label>
                 <input name="email" type="email" required>
-                <label>Codigo</label>
+                <label>Código</label>
                 <input name="code" type="text" maxlength="6" required>
                 <button class="btn" type="submit">Confirmar cadastro</button>
             </form>
