feat: add administrators

--- a/public/round.html
+++ b/public/round.html
@@ -143,7 +143,7 @@
                             </select>
                         </div>
                         <div class="rating-field">
-                            <label>Interesse no eixo X (1-10)</label>
+                            <label>Interesse no eixo X (1 desinteressante - 10 interessante)</label>
                             <input name="interestScore" type="number" min="1" max="10" required>
                         </div>
                     </div>
